--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,24 @@
   --light-pink : #fe83c6;
   --off-white : #fff2f9;
 }
-body{
+
+body {
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400; /* regular */
+  font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700; /* bold */
+}
+
+p, a {
+  font-weight: 400; /* regular */
+  font-style: normal;
+}
+
+a:hover {
+  text-decoration: underline;
 }
