--- a/src/components/Wall/Wall.css
+++ b/src/components/Wall/Wall.css
@@ -1,10 +1,12 @@
+
 .Wall{
     display: flex;
     max-width: 100vw;
     min-height: 100vh;
     flex-wrap: wrap;
     padding: 1rem;
-    background-color: var(--light-pink);
+    background-color: var(--pink);
+
 }
 .searchbar{
     width: 100%;
