--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400; /* regular */
   font-style: normal;
+  font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -24,4 +25,8 @@ p, a {
 
 a:hover {
   text-decoration: underline;
+}
+@media screen and (max-width:770px) {
+
+  
 }
