--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -12,6 +12,7 @@ main{
 main>h1,p{
     text-align: center;
     width: 80%;
+    text-transform: uppercase;
 }
 main>h1{
     font-weight: 1rem;
@@ -25,8 +26,9 @@ main>h1{
     appearance: button;
     background-color: var(--light-pink);
     border: solid transparent;
-    border-radius: 1rem;
-    border-width: 0 0 .25em;
+    border-radius: 4px;
+    /* border-radius: 2px; */
+    border-width: 0 .15em;
     box-sizing: border-box;
     color: var(--off-white);
     cursor: pointer;
@@ -50,9 +52,10 @@ main>h1{
     background-clip: padding-box;
     background-color: var(--pink);
     border: solid transparent;
-    border-radius: 16px;
+    border-radius: 4px;
     border-width: 0 0 .25em;
     bottom: -4px;
+    /* left: 10px; */
     content: "";
     left: 0;
     position: absolute;
@@ -66,11 +69,18 @@ main>h1{
     user-select: auto;
   }
   
-  .button-19:hover:not(:disabled) {
+  /* .button-19:hover:not(:disabled) {
     filter: brightness(1.1);
     -webkit-filter: brightness(1.1);
+    
+  } */
+  .button-19:hover{
+    
+    transform: translateY(1px);
+    box-shadow: 0 4px 4px 0 #0a090a86
+        0 4px 4px 0 #000000db;
+
   }
-  
   .button-19:disabled {
-    cursor: auto;
+    cursor: pointer;
   }  
